--- a/html/tienda.html
+++ b/html/tienda.html
@@ -38,9 +38,6 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="logo"> <!-- <img src="logoImage.png" alt="sample logo"> --> 
-      <!-- Company Logo text --> 
-      </div>
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Cart</a></div>
   </header>
   <section id="offer"> 
@@ -79,31 +76,32 @@
     </section>
     <section class="mainContent">
       <div class="productRow"><!-- Each product row contains info of 3 elements -->
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder </p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/bebes/cereal.jpg"></div>
+			<br>
+          <p class="price">$5,50</p>
+          <p class="productContent">Cereal de bebe </p>
+          <input type="button" name="	button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/bebes/nappis.jpg"></div>
+          <p class="price">$3,50</p>
+          <p class="productContent">Toallas Humedas</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/bebes/nutricalcin.jpg"></div>
+          <p class="price">$10</p>
+          <p class="productContent">Nutru Calcin</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
       </div>
       <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
-        <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
+        <article class="productInfo" style="width: 14rem;"> <!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/cuidado personal/axe.jpg"></div>
+          <p class="price">$4,50</p>
+          <p class="productContent">Desodorante</p>
           <input type="button" name="button" value="Buy" class="buyButton">
         </article>
         <article class="productInfo"> <!-- Each individual product description -->
@@ -141,22 +139,48 @@
       </div>
     </section>
   </div>
-  <footer> 
-    <!-- This is the footer with default 3 divs -->
-    <div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius sem neque. Integer ornare.</p>
-    </div>
-    <div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius sem neque. Integer ornare.</p>
-    </div>
-    <div class="footerlinks">
-      <p><a href="#" title="Link">Link 1 </a></p>
-      <p><a href="#" title="Link">Link 2</a></p>
-      <p><a href="#" title="Link">Link 3</a></p>
-    </div>
-	  
-  </footer>
-
 </div>
+	<hr>
+<div class="container"> 
+  <div class="row">
+    <div class="col-6 col-md-8 col-lg-7">
+      <div class="row text-center">
+        <div class="col-sm-6 col-md-4 col-lg-4 col-12">
+          <ul class="list-unstyled">
+            <li class="btn-link"> <a>Facebook</a> </li>
+            <li class="btn-link"> <a>Instagram</a> </li>
+          </ul>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg-4 col-12">
+          <ul class="list-unstyled">
+            <li class="btn-link"> <a>Soporte</a> </li>
+            <li class="btn-link"> <a>Contacto</a> </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4 col-lg-5 col-6">
+      <address>
+      <strong>MiKasita, Inc.</strong><br>
+      Indian Treasure Link<br>
+      Quitman, WA, 99110-0219<br>
+      <abbr title="Phone">P:</abbr> (123) 456-7890
+      </address>
+      <address>
+      <strong>Correo</strong><br>
+      <a href="mailto:#">mi.kasitat@email.com</a>
+      </address>
+    </div>
+  </div>
+</div>
+<footer class="text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright © MyKasita. All rights reserved 2023.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
