--- a/html/tienda.html
+++ b/html/tienda.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Tienda || Mi kasita</title>
+<title>Tienda || Mi ksita</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="../css/bootstrap-4.4.1.css" rel="stylesheet" type="text/css">
 <link href="../eCommerceAssets/styles/eCommerceStyle.css" rel="stylesheet" type="text/css">
@@ -40,9 +40,9 @@
     <!-- This is the header content. It contains Logo and links -->
     <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Cart</a></div>
   </header>
-  <section id="offer"> 
-    <h2>OFFER 50%</h2>
-    <p>REALLY AWESOME DISCOUNTS THIS JULY</p>
+  <section id="offer" >
+    <h2>OFERTAS 50%</h2>
+    <p>DESCUENTOS REALMENTE IMPRESIONANTES ESTE JULIO</p>
   </section>
   <div id="content">
     <section class="sidebar"> 
@@ -50,26 +50,22 @@
       <input type="text"  id="search" value="search">
       <div id="menubar">
         <nav class="menu">
-          <h2><!-- Title for menuset 1 -->MENU ITEM 1 </h2>
+          <h2><!-- Title for menuset 1 -->Filtro </h2>
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="#" title="Link">Link 1</a></li>
-            <li><a href="#" title="Link">Link 2</a></li>
-            <li><a href="#" title="Link">Link 3</a></li>
-            <li class="notimp"><!-- notimp class is applied to remove this link from the tablet and phone views --><a href="#"  title="Link">Link 4</a></li>
+            <li><a href="#" title="Link">Bebes</a></li>
+            <li><a href="#" title="Link">Cuidado Personal</a></li>
+			  <li><a href="#" title="Link">Suplementos</a></li>
           </ul>
         </nav>
         <nav class="menu">
-          <h2>MENU ITEM 2 </h2>
           <!-- Title for menuset 2 -->
           <hr>
           <ul>
             <!--List of links under menuset 2 -->
-            <li><a href="#" title="Link">Link 1</a></li>
-            <li><a href="#" title="Link">Link 2</a></li>
-            <li><a href="#" title="Link">Link 3</a></li>
-            <li class="notimp"><!-- notimp class is applied to remove this link from the tablet and phone views --><a href="#" title="Link">Link 4</a></li>
+            <li><a href="#" title="Link">Promociones</a></li>
+            
           </ul>
         </nav>
       </div>
@@ -77,20 +73,20 @@
     <section class="mainContent">
       <div class="productRow"><!-- Each product row contains info of 3 elements -->
         <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
-          <div><img alt="sample" src="../images/fotos/bebes/cereal.jpg"></div>
+          <div><img alt="sample" src="../images/fotos/bebes/cereal.jpg" style="height:10rem"></div>
 			<br>
           <p class="price">$5,50</p>
           <p class="productContent">Cereal de bebe </p>
           <input type="button" name="	button" value="Agregar" class="buyButton">
         </article>
         <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
-          <div><img alt="sample" src="../images/fotos/bebes/nappis.jpg"></div>
+          <div><img alt="sample" src="../images/fotos/bebes/nappis.jpg" style="height:12rem"></div>
           <p class="price">$3,50</p>
           <p class="productContent">Toallas Humedas</p>
           <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
         <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../images/fotos/bebes/nutricalcin.jpg"></div>
+          <div><img alt="sample" src="../images/fotos/bebes/nutricalcin.jpg" style="height:12rem"></div>
           <p class="price">$10</p>
           <p class="productContent">Nutru Calcin</p>
           <input type="button" name="button" value="Agregar" class="buyButton">
@@ -98,43 +94,49 @@
       </div>
       <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
-        <article class="productInfo" style="width: 14rem;"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../images/fotos/cuidado personal/axe.jpg"></div>
+        <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/cuidado personal/axe.jpg" style="height:11,5rem;"></div>
+			<br>
           <p class="price">$4,50</p>
           <p class="productContent">Desodorante</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
+			<div><img alt="sample" src="../images/fotos/cuidado personal/ego.jpg"></div>
+			<br>
+          <p class="price">$5</p>
+          <p class="productContent">Gel egor</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/cuidado personal/lubridem.jpg"></div>
+			<br>
+          <p class="price">$15</p>
+          <p class="productContent">Lubridem Familiar</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
       </div>
-      <div class="productRow">
-        <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+      <div class="productRow" style="width: 60rem;">
+        <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/suplementos/calcibon.jpg"></div>
+			<br>
+          <p class="price">$7,50</p>
+          <p class="productContent">Calcibon D</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/suplementos/glucerna.jpg"></div>
+			<br>
+          <p class="price">$8,50</p>
+          <p class="productContent">Glucerna</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="../eCommerceAssets/images/200x200.png"></div>
-          <p class="price">$50</p>
-          <p class="productContent">Content holder</p>
-          <input type="button" name="button" value="Buy" class="buyButton">
+        <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
+          <div><img alt="sample" src="../images/fotos/suplementos/xray.jpg"></div>
+			<br>
+          <p class="price">$12,50</p>
+          <p class="productContent">X-ray</p>
+          <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
       </div>
     </section>
