--- a/html/tienda.html
+++ b/html/tienda.html
@@ -10,10 +10,10 @@
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 	<script src="http://use.edgefonts.net/montserrat:n4:default;source-sans-pro:n2:default.js" type="text/javascript"></script>
 	<link rel="icon" type="image/x-icon" href="../images/icons8-farmacia-64.png">
-	<script src="..js/jquery-3.4.1.min.js"></script> 
+	<script src="../js/jquery-3.4.1.min.js"></script> 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="..js/popper.min.js"></script> 
-<script src="..js/bootstrap-4.4.1.js"></script>
+<script src="../js/popper.min.js"></script> 
+<script src="../js/bootstrap-4.4.1.js"></script>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
         <li class="nav-item active"> <a class="nav-link" href="..">Inicio <span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="tienda.html">Tienda</a> </li>
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informacion</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="#">Soporte</a> </div>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="html/formulario.html">Soporte</a> </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -38,7 +38,7 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><a href="#" title="Login/Register">Login/Register</a><a href="#" title="Cart">Cart</a></div>
+    <div id="headerLinks"><a href="#" title="Login/Register">Inicia sesión /Registro</a><a href="#" title="Cart">Carrito</a></div>
   </header>
   <section id="offer" >
     <h2>OFERTAS 50%</h2>
