--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="nav-item active"> <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="html/tienda.html">Tienda</a> </li>
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Información</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="#">Soporte</a> </div>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="html/formulario.html">Soporte</a> </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
