--- a/html/formulario.html
+++ b/html/formulario.html
@@ -12,11 +12,11 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container"> <a class="navbar-brand" href="#">Mi Kasita</a>
+  <div class="container"> <a class="navbar-brand" href="..">Mi Ksita</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active"> <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a> </li>
+        <li class="nav-item active"> <a class="nav-link" href="..">Inicio <span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="../html/tienda.html">Tienda</a> </li>
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Información</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="formulario.html">Soporte</a> </div>
