--- a/html/tienda.html
+++ b/html/tienda.html
@@ -25,7 +25,7 @@
         <li class="nav-item active"> <a class="nav-link" href="..">Inicio <span class="sr-only">(current)</span></a> </li>
         <li class="nav-item"> <a class="nav-link" href="tienda.html">Tienda</a> </li>
         <li class="nav-item dropdown"> <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informacion</a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="html/formulario.html">Soporte</a> </div>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item" href="#">Contacto</a> <a class="dropdown-item" href="../html/formulario.html">Soporte</a> </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
