--- a/html/tienda.html
+++ b/html/tienda.html
@@ -38,7 +38,7 @@
 <div id="mainWrapper">
   <header> 
     <!-- This is the header content. It contains Logo and links -->
-    <div id="headerLinks"><a href="#" title="Login/Register">Inicia sesión /Registro</a><a href="#" title="Cart">Carrito</a></div>
+    <div id="headerLinks"><a href="#" title="Login/Register">Inicia sesión /Registro</a><a href="carrito.html" title="Cart">Carrito</a></div>
   </header>
   <section id="offer" >
     <h2>OFERTAS 50%</h2>
