--- a/html/tienda.html
+++ b/html/tienda.html
@@ -70,8 +70,8 @@
         </nav>
       </div>
     </section>
-    <section class="mainContent">
-      <div class="productRow"><!-- Each product row contains info of 3 elements -->
+    <section class="mainContent" style="width: 55vw;">
+      <div class="productRow" ><!-- Each product row contains info of 3 elements -->
         <article class="productInfo" style="width: 18rem;"><!-- Each individual product description -->
           <div><img alt="sample" src="../images/fotos/bebes/cereal.jpg" style="height:10rem"></div>
 			<br>
@@ -116,7 +116,7 @@
           <input type="button" name="button" value="Agregar" class="buyButton">
         </article>
       </div>
-      <div class="productRow" style="width: 60rem;">
+      <div class="productRow" style="width: 45vw;">
         <article class="productInfo" style="width: 18rem;"> <!-- Each individual product description -->
           <div><img alt="sample" src="../images/fotos/suplementos/calcibon.jpg"></div>
 			<br>
